Help menu fix with dark mode

--- a/components/style.scss
+++ b/components/style.scss
@@ -596,3 +596,10 @@ span.checkmark {
   opacity: 0.6;
   color: var(--c2);
 }
+
+/* Help Menu */
+.rm-help-popup,
+.rm-help-categories,
+.rm-help-search__input {
+  color: black;
+}
