--- a/dark.css
+++ b/dark.css
@@ -600,3 +600,10 @@ span.checkmark {
   opacity: 0.6;
   color: var(--c2);
 }
+
+/* Help Menu */
+.rm-help-popup,
+.rm-help-categories,
+.rm-help-search__input {
+  color: black;
+}
